--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,1 +1,1 @@
-{ "rewrites": [{ "source": "/(.*)", "destination": "/index.js" }] }
+{ "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }] }
